# misis2025f-22-01-samsonov-n-o

./: CMakeLists.txt  README.md
dataset/Walnut2/Reconstructions/: fdk_pos1_000193.tiff  fdk_pos1_000226.tiff  fdk_pos1_000245.tiff  fdk_pos1_000248.tiff
gt_final/: fdk_pos1_000193_labels_gt.tiff  fdk_pos1_000226_labels_gt.tiff  fdk_pos1_000245_labels_gt.tiff  fdk_pos1_000248_labels_gt.tiff
results/v1/: metrics.csv
results/v1/error_maps/: error_summary.csv
results/v1/error_maps/fdk_pos1_000193/: error_summary.csv
results/v1/error_maps/fdk_pos1_000226/: error_summary.csv
results/v1/error_maps/fdk_pos1_000245/: error_summary.csv
results/v1/error_maps/fdk_pos1_000248/: error_summary.csv
results/v1/fdk_pos1_000193/: 01_gray.tiff  02_filtered.tiff  05_kernel_mask.tiff  06_septa_mask_v1.tiff  07_labels_vis.tiff  08_overlay.tiff  09_labels_ids.tiff
results/v1/fdk_pos1_000226/: 02_filtered.tiff  05_kernel_mask.tiff  06_septa_mask.tiff  07_labels_vis.tiff  08_overlay.tiff  09_labels_ids.tiff
results/v1/fdk_pos1_000245/: 05_kernel_mask.tiff  06_septa_mask.tiff  07_labels_vis.tiff  08_overlay.tiff  09_labels_ids.tiff
results/v1/fdk_pos1_000248/: 04_shell_mask.tiff  05_kernel_mask.tiff  06_septa_mask.tiff  07_labels_vis.tiff  08_overlay.tiff  09_labels_ids.tiff
results/v2/: metrics.csv
results/v2/error_maps/: error_summary_v2.csv
results/v2/error_maps/fdk_pos1_000193/: error_summary.csv
results/v2/error_maps/fdk_pos1_000226/: error_summary.csv
results/v2/error_maps/fdk_pos1_000245/: error_summary.csv
results/v2/error_maps/fdk_pos1_000248/: error_summary.csv
results/v2/fdk_pos1_000193/: 03_nut_mask.tiff  04_shell_mask.tiff  05_kernel_mask_v2.tiff  06_septa_mask.tiff  07_labels_vis.tiff  08_overlay.tiff  09_labels_ids.tiff
results/v2/fdk_pos1_000226/: 01_gray.tiff  03_nut_mask.tiff  04_shell_mask.tiff  05_kernel_mask.tiff  06_septa_mask.tiff  07_labels_vis.tiff  08_overlay.tiff  09_labels_ids.tiff
results/v2/fdk_pos1_000245/: 01_gray.tiff  02_filtered.tiff  03_nut_mask.tiff  04_shell_mask.tiff  05_kernel_mask.tiff  06_septa_mask.tiff  07_labels_vis.tiff  08_overlay.tiff  09_labels_ids.tiff
results/v2/fdk_pos1_000248/: 01_gray.tiff  02_filtered.tiff  03_nut_mask.tiff  05_kernel_mask.tiff  06_septa_mask.tiff  07_labels_vis.tiff  08_overlay.tiff  09_labels_ids.tiff
src/: walnut.hpp  walnut_error_map.cpp  walnut_metrics.cpp  walnut_v1.cpp  walnut_v2.cpp
